--- a/MR-CS/MrLogger/MrLogger.csproj
+++ b/MR-CS/MrLogger/MrLogger.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{CD15820F-5858-4A48-82C9-BC3B117E569F}</ProjectGuid>
+    <ProjectGuid>{E188CDA4-F472-4302-A2E0-569F102FE364}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>MrMathParser</RootNamespace>
-    <AssemblyName>MrMathParser</AssemblyName>
+    <RootNamespace>MrLogger</RootNamespace>
+    <AssemblyName>MrLogger</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -40,15 +40,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Expression.cs" />
-    <Compile Include="Helper\TestExpression.cs" />
+    <Compile Include="Logger.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\MrLogger\MrLogger.csproj">
-      <Project>{e188cda4-f472-4302-a2e0-569f102fe364}</Project>
-      <Name>MrLogger</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
