Adding new Menu form Removing calls to the test expressions Removing reference to the MrMathParser Adding reference to LoL Drink Calc

--- a/MR-CS/MR-CS/MR-CS.csproj
+++ b/MR-CS/MR-CS/MR-CS.csproj
@@ -46,8 +46,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Menu.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Menu.Designer.cs">
+      <DependentUpon>Menu.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Menu.resx">
+      <DependentUpon>Menu.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -71,9 +80,9 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\MrMathParser\MrMathParser.csproj">
-      <Project>{cd15820f-5858-4a48-82c9-bc3b117e569f}</Project>
-      <Name>MrMathParser</Name>
+    <ProjectReference Include="..\LeagueOfLegendsDrinkCalculator\LeagueOfLegendsDrinkCalculator.csproj">
+      <Project>{117087cb-2414-4994-a583-6e1e9986430d}</Project>
+      <Name>LeagueOfLegendsDrinkCalculator</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
